# calculator

./: .gitignore  Dockerfile  README.md  calculator.py  pyproject.toml
activities/: aws_activity.py  destroyAWS_activity.py  git_activity.py
worker/: calculator.py
workflows/: aws_workflow.py  git_workflow.py
